# pylibdmtx

./: .gitignore  .travis.yml  =2.3.0  =3.2.0  CHANGELOG.md  DEVELOPING.md  MANIFEST.in  MANIFEST.in.all  MANIFEST.in.win32  MANIFEST.in.win64  README.md  README.rst  pyproject.toml  requirements-test.txt  requirements.pip  setup.py  tox.ini
.github/workflows/: test.yml
pylibdmtx/: __init__.py  dmtx_library.py  pylibdmtx.py  pylibdmtx_error.py  wrapper.py
pylibdmtx/lib/: libdmtx-LICENSE.txt
pylibdmtx/scripts/: create_datamatrix.py  read_datamatrix.py  write_datamatrix.py
pylibdmtx/tests/: test_create_read_datamatrix.py  test_decode.py  test_dmtx_library.py  test_encode.py  test_pylibdmtx.py  test_read_datamatrix.py  test_read_write_datamatrix.py  test_reader_programming.py
