[tool.poetry]
name = "pylibdmtx"
version = "0.1.1"
description = "Pylibdmtx fork, with FNC1, margin, and module size exposure."
authors = ["matt <matt@appliedinvention.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
imageio = "^2.27.0"
Pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

